<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GlassLogin</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="signed_in_as">Please Login Google+</string>
    <string name="signing_in">Please Login Google+</string>

    <!--  BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected to <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="title_not_connected">not connected</string>

    <!--  DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="discoverable">Make discoverable</string>

    <string name="connect">登入Glass</string>
    <string name="welcome">Please Login Google+</string>
    <string name="forward">上一步</string>
    <string name="next">下一步</string>
    <string name="change_user">切換使用者</string>
    <string name="bluetooth">Login Creative Glass</string>
    <string name="connect_success">Login Success!</string>
    <!--<string name="please_gender">Please select your gender</string>-->
    <!--<string name="please_age">Please select your age</string>-->
    <string name="please_gender">請選擇性別</string>
    <string name="please_age">請選擇年齡</string>
    <string name="please_select_device">Please Select Your Device</string>
    <!--<string name="please_connect">Please Connect Your Google Glass</string>-->
    <string name="please_connect">與您的Google Glass連接</string>
    <string name="introduction">Welcome to Creative Glass! You can now move on to your Google Glass.</string>
    <string name="male">男生</string>
    <string name="female">女生</string>
    <string name="answerquestion_btn">Answer Question</string>
    <string name="createquestion_btn">Create Question</string>
    <string name="findquestion_txt">Walk around to find questions</string>


    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_connect_glass">ConnectGlass</string>
    <string name="title_activity_connect_success">ConnectSuccess</string>
    <string name="title_activity_set_profile">SetProfile</string>
    <string name="title_activity_set_profile_age">SetProfileAge</string>
    <string name="title_activity_choose_device">ChooseDevice</string>
    <string name="title_activity_creative_glass_main">CreativeGlassMain</string>
    <string name="title_activity_creative_glass_start">CreativeGlassStart</string>
    <string name="title_activity_find_question">FindQuestion</string>
    <string name="title_activity_create_hint1">CreateHint1</string>
    <string name="title_activity_with_glass_start">WithGlassStart</string>
    <string name="title_activity_create_question_answer">CreateQuestionAnswer</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_activity_question_info">QuestionInfo</string>
    <string name="title_activity_hints">Hints</string>
    <string name="title_activity_answer">Answer</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="title_activity_set_floor">SetFloor</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_maps2">Map</string>
    <string name="title_activity_glass_map">Map</string>
    <string name="title_activity_find_map">Map</string>
    <string name="title_activity_my_creative">MyCreative</string>
    <string name="title_activity_achievement">Achievement</string>
    <string name="title_activity_create_question">CreateQuestion</string>
    <string name="title_activity_create_question_send">CreateQuestionSend</string>
    <string name="title_activity_answer_question">AnswerQuestion</string>
    <string name="title_activity_score">Score</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">771109527739-i6fph48ih976gmuhac4of7nfakeiabjt.apps.googleusercontent.com</string>

</resources>
