<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.glass123.glasslogin.SetProfile"
    android:background="#444341">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_gender"
        android:id="@+id/textView4"
        android:textSize="30dp"
        android:layout_below="@+id/set_forward"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="#FFFFFF"/>

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:id="@+id/set_forward"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/white" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/set_next"
        android:layout_alignTop="@+id/set_forward"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/white" />

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/male_image"
        android:src ="@drawable/male"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/textView4"
    />
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/female_image"
        android:src ="@drawable/female"
        android:layout_alignTop="@+id/male_image"
        android:layout_toRightOf="@id/textView4"
        />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/male_radio"
        android:textSize="30dp"
        android:onClick="onRadioButtonClicked"
        android:layout_below="@+id/male_image"
        android:layout_toLeftOf="@id/textView4"
        android:checked="true"
        android:textColor="#FFFFFF"
        android:layout_marginRight="50dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:id="@+id/female_radio"
        android:textSize="30dp"
        android:onClick="onRadioButtonClicked"
        android:checked="false"
        android:layout_gravity="right"
        android:layout_alignTop="@+id/male_radio"
        android:layout_toRightOf="@id/textView4"
        android:textColor="#FFFFFF"
        android:layout_marginLeft="40dp" />

</RelativeLayout>
