<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.glass123.glasslogin.SetGender"
    android:background="@color/new_yellow">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_gender"
        android:id="@+id/please_gender"
        android:layout_alignParentTop="true"
        android:background="@color/new_purple"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="30dp"
        android:textColor="@color/new_white" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:id="@+id/set_forward"
        android:textColor="@color/new_purple"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/new_white"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp" />

    <Button
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:id="@+id/set_next"
        android:layout_alignTop="@+id/set_forward"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@color/new_purple"
        android:background="@color/new_white"
        android:layout_marginRight="16dp" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/male_image"
        android:src ="@drawable/male"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/set_forward"
        android:layout_toEndOf="@+id/set_forward" />
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/female_image"
        android:src ="@drawable/female"
        android:layout_alignTop="@+id/male_image"
        android:layout_toLeftOf="@+id/set_next"
        android:layout_toStartOf="@+id/set_next" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"
        android:id="@+id/male_radio"
        android:textSize="30dp"
        android:onClick="onRadioButtonClicked"
        android:checked="true"
        android:textColor="#FFFFFF"
        android:layout_alignTop="@+id/female_radio"
        android:layout_alignLeft="@id/male_image"
        android:layout_marginLeft="10dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female"
        android:id="@+id/female_radio"
        android:textSize="30dp"
        android:onClick="onRadioButtonClicked"
        android:checked="false"
        android:layout_gravity="right"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/female_image"
        android:layout_alignLeft="@+id/female_image"
        android:layout_alignStart="@+id/female_image"
        android:layout_marginLeft="10dp" />

</RelativeLayout>
