<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.glass123.glasslogin.SetProfileAge"
    android:background="#444341">

    <ViewFlipper
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/viewFlipper1"
        android:layout_alignTop="@+id/viewFlipper2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

    </ViewFlipper>

    <ViewFlipper
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:id="@+id/viewFlipper2"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/viewFlipper1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

    </ViewFlipper>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:id="@+id/set_age_forward"
        android:layout_alignTop="@+id/set_age_next"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/set_age_next"
        android:text="@string/next"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/please_age"
        android:id="@+id/textView5"
        android:textSize="30dp"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/set_age_next"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" />

</RelativeLayout>
